--- a/csuf_template/csuf_template.tex
+++ b/csuf_template/csuf_template.tex
@@ -1,3 +1,26 @@
+% Accessible Syllabus Template - CSU Fullerton
+% Created by David P. Adams, Ph.D.
+% Compatible with all major LaTeX distributions
+%
+% LICENSE: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
+% You are free to share and adapt this work for non-commercial purposes with attribution
+% Full license: https://creativecommons.org/licenses/by-nc-sa/4.0/
+%
+%
+% USAGE INSTRUCTIONS:
+% 1. Replace ALL CAPS placeholders with your course information
+% 2. Examples: 
+%    COURSE NUMBER -> POSC 315
+%    INSTRUCTOR NAME -> Jane Smith  
+%    SEMESTER -> Fall, YEAR -> 2025
+%    DELIVERY MODE -> Asynchronous Online
+% 3. Remove sections that don't apply to your course
+% 4. Verify all CSU Fullerton URLs are current
+% 5. Add/modify course schedule as needed
+%
+% This template is designed for maximum accessibility and professional appearance
+% Compile with LuaLaTeX for best results
+% Ensure you have the required packages installed in your LaTeX distribution
 \documentclass[12pt]{article}
 
 % Language and accessibility
