it's pretty good

--- a/csuf_template_shell/csuf_template_shell.tex
+++ b/csuf_template_shell/csuf_template_shell.tex
@@ -82,7 +82,7 @@
 
 % Set the PDF document title properly
 \pdfinfo{
-  /Title (PREFIX & Number: Course Title - Term Year)
+  /Title (PREFIX \& Number: Course Title - Term Year)
 }
 
 % ========== CSUF HEADER (OPTIONAL) ==========
@@ -133,16 +133,18 @@ If you encounter any technical difficulties, contact the instructor immediately 
 YOUR MODALITY, DAYS, TIMES, LOCATION
 
 \vspace{0.5em}
-\noindent \textbf{Zoom:} YOUR ZOOM LINK IF APPLICABLE \\
-\noindent \textbf{Course requisite(s):} LIST PREREQUISITES/COREQUISITES OR "none" \\
-\noindent \textbf{Catalog description:} COPY CATALOG DESCRIPTION VERBATIM (40 words max) \\
-\noindent \textbf{Additional description:} OPTIONAL EXPANDED DESCRIPTION \\
-\noindent \textbf{Policy regarding the use of generative AI:} YOUR AI POLICY \\
-\noindent \textbf{Course materials and equipment:} ~ \\
-\noindent \textbf{Required text(s):} LIST REQUIRED TEXTS OR "none" \\
-\noindent \textbf{Recommended text(s):} LIST RECOMMENDED TEXTS OR DELETE THIS LINE \\
-\noindent \textbf{Other course materials and equipment:} LIST OTHER MATERIALS OR "none" \\
-\noindent \textbf{Zero cost:} IF APPLICABLE, NOTE THAT THIS IS A ZERO-COST COURSE
+\begin{itemize}[label={}, leftmargin=0pt]
+\item \textbf{Zoom:} YOUR ZOOM LINK IF APPLICABLE
+\item \textbf{Course requisite(s):} LIST PREREQUISITES/COREQUISITES OR "none"
+\item \textbf{Catalog description:} COPY CATALOG DESCRIPTION VERBATIM (40 words max)
+\item \textbf{Additional description:} OPTIONAL EXPANDED DESCRIPTION
+\item \textbf{Policy regarding the use of generative AI:} YOUR AI POLICY
+\item \textbf{Course materials and equipment:} ~
+\item \textbf{Required text(s):} LIST REQUIRED TEXTS OR "none"
+\item \textbf{Recommended text(s):} LIST RECOMMENDED TEXTS OR DELETE THIS LINE
+\item \textbf{Other course materials and equipment:} LIST OTHER MATERIALS OR "none"
+\item \textbf{Zero cost:} IF APPLICABLE, NOTE THAT THIS IS A ZERO-COST COURSE
+\end{itemize}
 
 \vspace{1em}
 \noindent \textbf{Student Learning Outcomes:}
