updated with new canvas language

--- a/csuf_template/csuf_template.tex
+++ b/csuf_template/csuf_template.tex
@@ -110,7 +110,7 @@
 \vspace{0.5em} \\
 \noindent \textbf{\underline{Phone}:} ???-???-????
 \vspace{0.5em} \\
-\noindent \textbf{\underline{Email}:} ????@???.???
+\noindent \textbf{\underline{Email}:} ????\@???.???
 \vspace{0.5em} \\ 
 \noindent \textbf{\underline{Office hours}:} {\color{suggestionred}Day(s) and time(s), by appointment, by email, by Zoom if available} {\color{annotationblue}-- normally at least three (3) office hours per week are required for faculty with full-time appointments. Faculty with part-time appointments are required to hold a minimum of one (1) hour per week, on a pro-rated scale (see \href{https://www.fullerton.edu/senate/publications_policies_resolutions/ups/UPS\%20200/UPS\%20230.020.pdf}{UPS 230.020})}
 
@@ -123,13 +123,11 @@
 % Section 3: Technical Problems
 \section*{Technical Problems}
 
-{\color{suggestionred}If you encounter any technical difficulties, contact the instructor immediately to document the problem. Then, contact: \href{http://www.fullerton.edu/it/students/helpdesk/index.php}{student IT help desk}, \href{mailto:StudentITHelpDesk@fullerton.edu}{email}, phone = 657-278-8888, walk-in \href{http://www.fullerton.edu/it/students/sgc/index.php}{student genius center}, online chat - log into \href{http://my.fullerton.edu}{portal}; click ``Online IT Help''; click ``Live Chat.''}
+{\color{suggestionred}If you encounter any technical difficulties, contact the instructor immediately to document the problem. Then, contact: \href{https://www.fullerton.edu/it/services/helpdesk/}{student IT help desk}, \href{mailto:StudentITHelpDesk@fullerton.edu}{email}, phone = 657-278-8888, walk-in \href{http://www.fullerton.edu/it/students/sgc/index.php}{student genius center}, online chat - log into \href{http://my.fullerton.edu}{portal}; click ``Online IT Help''; click ``Live Chat.''}
 
 \vspace{0.5em}
 
-\noindent \textbf{\underline{For issues with Canvas}}: {\color{suggestionred}Canvas Support Hotline = 855-302-7528, \href{https://cases.canvaslms.com/liveagentchat?chattype=student&sfid=001A000000YzcwQIAR}{student support chat}}
-
-\vspace{0.5em}
+\noindent \textbf{\underline{For issues with Canvas}}: {\color{suggestionred}Canvas Support Hotline = 657-278-8888, \href{https://canvashelp.fullerton.edu/}{search the CSUF Canvas Guides with AI Assistant}, or \href{https://titans.service-now.com/sp?id=sc_cat_item&sys_id=f88efe80ebea6a10fb7cfcffcad0cdc6&subject=Canvas}{report a problem.}}
 
 \noindent {\color{suggestionred}In case of technical difficulties with CANVAS or other online resources, your instructor will communicate with students directly through their CSUF email. The instructor will provide directions on alternative methods for submitting work and/or may extend submission deadlines. If email is not available, students may contact the department office for guidance.}
 
