--- a/csuf_template_shell/csuf_template_shell.tex
+++ b/csuf_template_shell/csuf_template_shell.tex
@@ -112,7 +112,7 @@ YOUR PREFERRED COMMUNICATION METHOD AND POLICY HERE
 If you encounter any technical difficulties, contact the instructor immediately to document the problem. Then, contact: \href{http://www.fullerton.edu/it/students/helpdesk/index.php}{student IT help desk}, \href{mailto:StudentITHelpDesk@fullerton.edu}{email}, phone (657) 278-8888, walk-in \href{http://www.fullerton.edu/it/students/sgc/index.php}{student genius center}, online chat - log into \href{http://my.fullerton.edu}{portal}; click ``Online IT Help''; click ``Live Chat.''
 
 \vspace{0.5em}
-\noindent \textbf{For issues with Canvas:} Canvas Support Hotline (855) 302-7528, \href{https://cases.canvaslms.com/liveagentchat?chattype=student&sfid=001A000000YzcwQIAR}{student support chat}
+\noindent \textbf{\underline{For issues with Canvas}}: Canvas Support Hotline = (657) 278-8888, \href{https://canvashelp.fullerton.edu/}{search the CSUF Canvas Guides with AI Assistant}, or \href{https://titans.service-now.com/sp?id=sc_cat_item&sys_id=f88efe80ebea6a10fb7cfcffcad0cdc6&subject=Canvas}{report a problem.}
 
 \vspace{0.5em}
 \noindent \textbf{Alternative plan for submitting work:} DESCRIBE YOUR BACKUP PLAN
