check after printing. before moving to new syllabus template

--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -213,19 +213,6 @@ Plagiarism is a serious violation of academic integrity and will not be tolerate
 
 \subsection*{Written Work}
 All written work must be submitted in a professional format, including proper grammar, spelling, and punctuation. Written work must also be properly cited using the appropriate citation style. Students are expected to follow the guidelines for written work provided by the professor and to seek clarification if they have questions about the requirements.
-
-\subsection*{Artificial Intelligence Policy}
-\subsubsection*{Definitions of Generative AI}
-
-\noindent For the purposes of this course, generative AI refers to artificial intelligence systems capable of producing human-like text, images, or other content. This includes, but is not limited to:
-
-\begin{itemize}
-    \item Large language models (LLM) (e.g., GPT-3, GPT-4)
-    \item Text-to-image generators (e.g., DALL-E, Midjourney)
-    \item AI-powered writing assistants (e.g., ChatGPT, Claude)
-    \item Automated content generators
-\end{itemize}
-
 \subsection*{Artificial Intelligence Policy}
 
 \subsubsection*{Definition of Generative AI}
@@ -247,7 +234,7 @@ AI is permitted and encouraged as a learning tool, under the following guideline
     \item \textbf{Allowed}: Using AI for feedback on annotated bibliographies, synthesis drafts, and reflections (see assignments for sample prompts).
     \item \textbf{Allowed}: Using AI to brainstorm questions, highlight gaps, or check clarity and organization.
     \item \textbf{Not Allowed}: Submitting AI-generated text as your own work or asking AI to rewrite your assignments.
-    \item \textbf{Optional}: AI use is not mandatory. Students may complete all work without AI if they prefer.
+    \item \textbf{Optional}: Students may choose whether or not to use AI tools for any assignment in this course. All work can be completed successfully without AI assistance. This optional approach applies to all course requirements, regardless of specific AI-related instructions in individual assignments.
 \end{itemize}
 
 \subsubsection*{Rationale for AI Policy}
