schedule is updated and new book selected

--- a/POSC 521 MPA Capstone/2025-26 Fall/521_Students.bib
+++ b/POSC 521 MPA Capstone/2025-26 Fall/521_Students.bib
@@ -209,6 +209,14 @@
   file = {/home/dadams/Zotero/storage/XIM8TME7/Gulick - 1937 - Notes on the Thoery of Organization.pdf}
 }
 
+@book{guy2004emotional,
+  title = {Emotional Labor, Empathy, and Compassion in Public Administration},
+  author = {Guy, Mary E. and Newman, Meredith A.},
+  year = {2004},
+  publisher = {M.E. Sharpe},
+  address = {Armonk, NY}
+}
+
 @article{GUY2012,
   title = {Social {{Equity}}: {{Its Legacy}}, {{Its Promise}}},
   shorttitle = {Social {{Equity}}},
