--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -45,28 +45,29 @@
 
 \title{MPA Capstone Seminar: \\ Public Administration Theory}
 \author{POSC 521 — Spring 2025}
-\date{Tuesdays at 7:00 in GH 208}
-    \maketitle
+\date{Tuesdays at 7:00 in Humanities 413}
+
+\maketitle
         \subsection*{Session Schedule:}
-                    
-                    \begin{multicols}{2}
-                    \subsubsection*{In-Person Sessions}
-                    \begin{itemize}[leftmargin=*]
-                        \item January 28
-                        \item February 4, 11, 18, 25
-                        \item March 4, 11, 18, 25
-                        \item May 6
-                    \end{itemize}
-                    
-                    \columnbreak
-                    
-                    \subsubsection*{Asynchronous Online Sessions}
-                    \begin{itemize}[leftmargin=*]
-                        \item January 21
-                        \item April 8, 15, 22, 29
-                        \item May 13
-                    \end{itemize}
-                    \end{multicols}
+                            
+        \begin{multicols}{2}
+        \subsubsection*{In-Person Sessions}
+        \begin{itemize}[leftmargin=*]
+            \item August 26
+            \item September 2, 9, 16, 23, 30
+            \item October 7, 14, 21, 28
+            \item December 9
+        \end{itemize}
+                            
+        \columnbreak
+                            
+        \subsubsection*{Asynchronous Online Sessions}
+        \begin{itemize}[leftmargin=*]
+            \item November 3, 11, 15
+            \item December 2, 14
+        \end{itemize}
+        \end{multicols}
+
 
 
                     \subsection*{Professor: David P. Adams, Ph.D.}
@@ -119,9 +120,9 @@
     \subsection*{Required Texts}
     \begin{itemize}
         \item \textbf{Denhardt and Denhardt}. \textit{The New Public Service: Serving, Not Steering}. 4th ed. Routledge, 2015.
-        \item \textbf{Hanna-Attisha, Mona}. \textit{What the Eyes Don't See: A Story of Crisis, Resistance, and Hope in an American City}. One World, 2018.
         \item \textbf{Lipsky, Michael}. \textit{Street-Level Bureaucracy: Dilemmas of the Individual in Public Services}. Russell Sage Foundation, 2010.
-        \item \textbf{Stivers, Camilla}. \textit{Bureau Men, Settlement Women: Constructing Public Administration in the Progressive Era}. University of Kansas Press, 2000.
+        \item \textbf{Guy, Mary E., and Meredith A. Newman}. \textit{Emotional Labor, Empathy, and Compassion in Public Administration}. Armonk, NY: M.E. Sharpe, 2004.
+        \item \textbf{McGhee, Heather}. \textit{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together}. One World, 2021.
     \end{itemize}
 
 \subsection*{Additional Readings}
@@ -366,9 +367,9 @@ Each week includes the following components:
 
 In addition to regular class discussion, structured peer review workshops will occur during class in:
 \begin{itemize}
-    \item \textbf{Week 3}: Focus on developing stronger analytical connections
+    \item \textbf{Week 2}: Focus on developing stronger analytical connections
     \item \textbf{Week 6}: Emphasis on theory-practice integration
-    \item \textbf{Week 9}: Final comprehensive exam preparation and synthesis refinement
+    \item \textbf{Week 8}: Final comprehensive exam preparation and synthesis refinement
 \end{itemize}
 
 \paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Please read the \textbf{Artificial Intelligence Policy} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table
@@ -541,23 +542,29 @@ This capstone project allows students to deepen their understanding of their MPA
 
 The due dates for the course requirements are as follows:
     \begin{itemize}
-        \item Annotated Bibliography and Synthesis: 
+        \item Weekly Readings Assignments:
         \begin{itemize}
-            \item Annotated Bibliographies and Syntheses: Due each week by 7:00 p.m. on Tuesday
-            \item Peer Review: Due each week by 11:59 p.m. on Friday
-            \item Final Synthesis: Due each week by 11:59 p.m. on Saturday
-            \item Personal Reflection: Due each week by 11:59 p.m. on Saturday
+            \item Annotated Bibliography: Due each Monday by 11:59 p.m. (Weeks 1–9, excluding Thanksgiving week)
+            \item Rough Draft Synthesis Paper: Due each Tuesday by 7:00 p.m. (Weeks 1–9)
+            \item Final Synthesis Paper: Due each Friday by 11:59 p.m. (Weeks 1–9)
+            \item Personal Reflection: Due each Friday by 11:59 p.m. (Weeks 1–9)
+        \end{itemize}
+        \item Practice Comprehensive Exam Response:
+        \begin{itemize}
+            \item Distributed in Week 10 (Sunday, 10/26)
+            \item Due on Saturday, 11/1 by 11:59 p.m.
         \end{itemize}
         \item MPA Comprehensive General Area Essay Exam:
         \begin{itemize}
-            \item Distributed on Friday, 4/11 at 8:00 a.m.
-            \item Due on Thursday, 4/17 by 4:59 p.m.
+            \item Distributed on Friday, 11/7 at 8:00 a.m.
+            \item Due on Thursday, 11/13 by 4:59 p.m.
         \end{itemize}
         \item Concentration Area Paper:
         \begin{itemize}
-            \item Topic Selection: Due on 4/26
-            \item Literature Review Draft: Due on 5/3
-            \item Final Draft: Due on 5/13 by 9:00 p.m.
+            \item Topic Selection: Due Week 13 (Sunday, 11/23)
+            \item Literature Review Draft: Due Week 14 (Sunday, 12/7)
+            \item Workshop Participation: Week 15 (Tuesday, 12/9)
+            \item Final Draft: Due Tuesday, 12/16 by 9:00 p.m.
         \end{itemize}
     \end{itemize}
 
@@ -606,20 +613,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
 
 \section{Course Schedule}
 
-\subsection*{Week 1, Starting 1/19: Introduction and Syllabus Review}
-\begin{itemize}
-    \item \textbf{Asynchronous Online Session}: Introduction to the Course and Syllabus Review
-    \item Readings:
-        \begin{itemize}
-            \item Review the course syllabus
-        \end{itemize}
-    \item Assignments:
-        \begin{itemize}
-            \item Read and annotate the syllabus
-            \item Prepare for Week 2 readings
-        \end{itemize}
-\end{itemize}
-\subsection*{Week 2, Starting 1/26: Public Administration Theory I}
+\subsection*{Week 1, Starting 8/25: Public Administration Theory I}
 \begin{itemize}
     \item \textbf{In-person Session}: Introduction to the Course
     \item Readings:
@@ -630,13 +624,13 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Follett1926}, ``The Giving of Orders'' 
             \item \citet{simon1946}, ``Proverbs of Administration'' 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (8/25)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (8/26)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (8/26)}: Class Discussion
+    \item \textbf{Due Friday (8/29)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 3, Starting 2/2: Ethics and Values in Public Administration}
+\subsection*{Week 2, Starting 9/1: Ethics and Values in Public Administration}
 \begin{itemize}
     \item \textbf{In-person Session}: Public Service Values and Ethics
     \item Readings:
@@ -647,27 +641,27 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{Adams2009}, ``Unmasking Administrative Evil'' 
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapter 7 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (9/1)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (9/2)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (9/2)}: Class Discussion  \& Peer Review Workshop
+    \item \textbf{Due Friday (9/5)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 4, Starting 2/9: Public Administration Theory II}
+\subsection*{Week 3, Starting 9/8: Public Administration Theory II}
 \begin{itemize}
     \item \textbf{In-person Session}: Public Administration in the U.S. Context
     \item Readings:
         \begin{itemize}
-            \item \citet{Stivers2000}, \emph{Bureau Men, Settlement Women} 
-            \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 1--4 
+            \item TBD
+            \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 1--6 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (9/8)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (9/9)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (9/9)}: Class Discussion
+    \item \textbf{Due Friday (9/12)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 5, Starting 2/16: Leadership and Motivation}
+\subsection*{Week 4, Starting 9/15: Leadership and Motivation}
 \begin{itemize}
     \item \textbf{In-person Session}: Leadership and Motivation
     \item Readings:
@@ -678,13 +672,13 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{maslow1943}, ``A Theory of Human Motivation'' 
             \item \citet{Fairholm2004}, ``Different Perspectives on the Practice of Leadership'' 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (9/15)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (9/16)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (9/16)}: Class Discussion
+    \item \textbf{Due Friday (9/19)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 6, Starting 2/23: Performance Management}
+\subsection*{Week 5, Starting 9/22: Performance Management}
 \begin{itemize}
     \item \textbf{In-person Session}: Performance Management
     \item Readings:
@@ -695,27 +689,26 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{marvel2015}, ``Unconscious Bias in Citizens' Evaluations\dots'' 
             \item \citet{nicholson-crotty2004}, ``Public Management and Organizational Performance'' 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (9/22)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (9/23)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (9/23)}: Class Discussion
+    \item \textbf{Due Friday (9/26)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 7, Starting 3/2: Street-Level Bureaucrats}
+\subsection*{Week 6, Starting 9/29: Street-Level Bureaucrats}
 \begin{itemize}
     \item \textbf{In-person Session}: Street-Level Bureaucrats
     \item Readings:
         \begin{itemize}
-            \item \citet{Lipsky2010}, \emph{Street-Level Bureaucracy}, Chapters 1--10 
-            \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 5--6 
+            \item \citet{Lipsky2010}, \emph{Street-Level Bureaucracy}
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (9/29)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (9/30)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (9/30)}: Class Discussion \& Peer Review Workshop
+    \item \textbf{Due Friday (10/3)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 8, Starting 3/9: Privatization and Contracting}
+\subsection*{Week 7, Starting 10/6: Privatization and Contracting}
 \begin{itemize}
     \item \textbf{In-person Session}: Privatization and Contracting
     \item Readings:
@@ -724,15 +717,15 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \cite{hood1991}, ``A Public Management for All Seasons?''
             \item \citet{brownManagingPublicService2006}, ``Managing Public Service Contracts''
             \item \citet{jos2009}, ``Keeping it Public''
-            \item \citet{raineyComparingPublicPrivate2000}, ``Comparing Public and Private Organizations''
+            \item \citet{RAINEY2000a}, ``Comparing Public and Private Organizations''
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (10/6)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (10/7)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (10/7)}: Class Discussion
+    \item \textbf{Due Friday (10/10)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 9, Starting 3/16: 21st Century Challenges}
+\subsection*{Week 8, Starting 10/13: 21st Century Challenges}
 \begin{itemize}
     \item \textbf{In-person Session}: 21st Century Challenges
     \item Readings:
@@ -742,79 +735,83 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
             \item \citet{mccandless2022}, ``A Long Road''
             \item \citet{Denhardt2015}, \emph{The New Public Service}, Chapters 10--12 
         \end{itemize}
-    \item Due Tuesday: Annotated Bibliography
-    \item Due Thursday: Synthesis Paper
-    \item Due Friday: Peer Review
-    \item Due Saturday: Final Synthesis and Personal Reflection
+    \item \textbf{Due Monday (10/13)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (10/14)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (10/14)}: Peer Review Workshop \& Class Discussion
+    \item \textbf{Due Friday (10/17)}: Final Synthesis Paper \& Reflection
 \end{itemize}
 
-\subsection*{Week 10, Starting 3/23: Practice Comprehensive Exam Response}
+\subsection*{Week 9, Starting 10/20: Readings and Peer Review Workshop}
 \begin{itemize}
-    \item \textbf{In-person Session}: Preparation for the Practice Comprehensive Exam Response
-    \begin{itemize}
-        \item Review key theoretical frameworks in public administration.
-        \item Discuss strategies for integrating course materials into a comprehensive argument.
-        \item Peer discussion and synthesis planning.
-    \end{itemize}
-    \item \textbf{Readings}: 
-    \begin{itemize}
-        \item Revisit core course texts on Classical Public Administration, New Public Service, and New Public Management.
-        \item Review prior weekly synthesis papers and annotated bibliographies for thematic connections.
-    \end{itemize}
-    \item \textbf{Assignments}:
-    \begin{itemize}
-        \item \textbf{Practice Comprehensive Exam Response} (Due Saturday, 40 points).
+    \item \textbf{In-person Session}: Class discussion and peer review workshop on assigned readings
+    \item Readings:
         \begin{itemize}
-            \item 1,620-word analytical essay.
-            \item Incorporate course literature and theoretical frameworks.
-            \item Use APA or Chicago author-date citation style.
+            \item \cite{guy2004emotional}, \emph{Emotional Labor, Empathy, and Compassion in Public Administration}
         \end{itemize}
+    \item \textbf{Due Monday (10/20)}: Annotated Bibliography
+    \item \textbf{Due Tuesday (10/21)}: Rough Draft Synthesis Paper
+    \item \textbf{Tuesday (10/21)}: Class Discussion
+    \item \textbf{Due Friday (10/24)}: Final Synthesis Paper \& Reflection
+\end{itemize}
+
+\subsection*{Week 10, Starting 10/27: Practice Comprehensive Exam Response}
+\begin{itemize}
+    \item \textbf{In-person Session}: Distribution and discussion of practice comprehensive exam
+    \begin{itemize}
+        \item Review key theoretical frameworks in public administration
+        \item Discuss strategies for integrating course materials into a comprehensive argument
+        \item Outline approaches to time management and exam writing
     \end{itemize}
+    \item \textbf{Readings}: Revisit core course texts; review prior synthesis papers
+    \item \textbf{Tuesday (10/28)}: Class Discussion on practice exam prompt
+    \item \textbf{Due Tuesday (11/4)}: Practice Comprehensive Exam Essay 
 \end{itemize}
 
 
-\subsection*{Spring Break, Starting 3/30}
+\subsection*{Week 11, Starting 11/3: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{No Classes}: Enjoy your break!
+    \item \textbf{Asynchronous Session}: Practice Exam Review due Tuesday (11/4) by 7:00 p.m.
+    \item \textbf{Comprehensive General Area Exam distributed Friday (11/7) at 8:00 a.m.}
 \end{itemize}
 
-\subsection*{Week 11, Starting 4/6: Comprehensive General Area Essay Exam}
+\subsection*{Week 12, Starting 11/10: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Exam Distributed on Friday at 8:00 a.m.
+    \item \textbf{Asynchronous Session}: No class meeting
+    \item \textbf{Comprehensive General Area Exam due Thursday (11/13) by 4:59 p.m.}
 \end{itemize}
 
-\subsection*{Week 12, Starting 4/13: Comprehensive General Area Essay Exam}
-\begin{itemize}
-    \item \textbf{Asynchronous Session}: Comprehensive General Area Essay Exam Due on Thursday at 4:59 p.m.
-\end{itemize}
-
-\subsection*{Week 13, Starting 4/20: Concentration Area Paper}
+\subsection*{Week 13, Starting 11/17: Concentration Area Paper}
 \begin{itemize}
     \item \textbf{Asynchronous Session}: Concentration Area Paper
     \item Paper expectations and guidelines 
-    \item Schedule a 1:1 meeting to discuss topic selection at \href{https://dadams.io/appointments}{dadams.io/appointments}
-    \item Host 1:1 meetings on 4/22 at 7:00 - 9:00 p.m. at \href{https://fullerton.zoom.us/j/3347502639}{fullerton.zoom.us/j/3347502639}
     \item Due: Topic Selection
 \end{itemize}
 
-\subsection*{Week 14, Starting 4/27: Concentration Area Paper}
+\subsection*{Week X, Starting 11/24: Thanksgiving Break}
 \begin{itemize}
-    \item \textbf{Asynchronous Session}: Concentration Area Paper
-    \item Due: Literature Review Draft
+    \item \textbf{No Class}: Thanksgiving Holiday
 \end{itemize}
 
-\subsection*{Week 15, Starting 5/4: Concentration Area Paper}
+\subsection*{Week 14, Starting 12/1: Concentration Area Paper}
 \begin{itemize}
-    \item \textbf{In-Person Session}
-    \item Course Wrap-Up and Final Reflections
-    \item Potluck Celebration
+    \item \textbf{Asynchronous Session}: Literature Review Draft
 \end{itemize}
 
-\subsection*{Week 16, Starting 5/11: Concentration Area Paper}
+\subsection*{Week 15, Starting 12/8: Concentration Area Paper}
+\begin{itemize}
+    \item \textbf{In-Person Session}: Concentration Area Paper Workshop
+\end{itemize}
+
+\subsection*{Week 16, Starting 12/15: Concentration Area Paper}
 \begin{itemize}
     \item \textbf{Asynchronous Session}: Concentration Area Paper
-    \item \textbf{Due: Concentration Area Paper Final Draft on 5/13 by 9:OO p.m.}
+    \item \textbf{Due: Final Draft on Tuesday 12/16 by 9:00 p.m.}
 \end{itemize}
+
+
+          
+%% bibliography
+
 
             \singlespace
             \bibliographystyle{apsr}
@@ -825,5 +822,5 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
 Updated: \today
 \end{flushright}
 
-            
+
 \end{document}
