--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -110,16 +110,17 @@ Public Administration Theory} % Course title
 \section{Faculty Information}
 % Replace placeholders with your information
 \noindent \textbf{Instructor:} David P. Adams, Ph.D. \\
+\noindent \textbf{Pronouns:} He/Him \\
 \noindent \textbf{Office:} Gordon Hall 521 \\
 \noindent \textbf{Phone/Text:} (657) 278-4770 \\
-\noindent \textbf{Website:} \href{https://dadams.io}{dadams.io}
+\noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
 \noindent \textbf{Email:} dpadams@fullerton.edu \\
-\noindent \textbf{Office hours:} Tuesdays at 5:30, by \href{https://dadams.io/appointments}{appointment}
+\noindent \textbf{Zoom ID:} 334 750 2639 \\
+\noindent \textbf{Office hours:} Mondays at 12:30--1:30, Tuesdays at 5:30--6:30, and by \href{https://dadams.io/appointments}{appointment} throughout the week. Meetings can be in-person or virtual via Zoom.
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section{Course Communication}
 All course announcements and communications will be sent via \emph{Canvas} and university email. Students are responsible for regularly checking their \emph{Canvas} notifications and email. Students are also responsible for ensuring that their \emph{Canvas} notifications are set to receive messages from the course. Students are expected to check \emph{Canvas} and their email at least once daily.
-
 
 % ========== SECTION 3: TECHNICAL PROBLEMS ==========
 \section{Technical Problems}
