table for course modality dates

--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -137,23 +137,34 @@ If you encounter any technical difficulties, contact the instructor immediately 
 
 % ========== SECTION 4: COURSE INFORMATION ==========
 \section{Course Information}
-    \subsubsection*{In-Person Sessions}
-    \begin{itemize}[leftmargin=*]
-        \item August 26
-        \item September 2, 9, 16, 23, 30
-        \item October 7, 14, 21, 28
-        \item December 9
-    \end{itemize}
 
-    \subsubsection*{Asynchronous Online Sessions}
-    \begin{itemize}[leftmargin=*]
-        \item November 3, 11, 15
-        \item December 2, 14
-    \end{itemize}
+\subsection*{Course Format:}
+This course will be conducted in a hybrid format, with both in-person and asynchronous online sessions, as indicated in Table \ref{tab:session-schedule}.
 
-	\subsection {Course requisite(s):}
+    \begin{center}
+    \begin{table}[h]
+        \caption{Session Schedule}
+        \label{tab:session-schedule}
+        \centering
+        \begin{tblr}{
+            colspec = {X[2,l] X[4,l]},
+            rowhead = 1,             
+            row{1} = {font=\bfseries, bg=gray!20},
+        }
+            Session Type & Dates \\      
+            In-Person Sessions & August 26; September 2, 9, 16, 23, 30; October 7, 14, 21, 28; December 9 \\
+            Asynchronous Online Sessions & November 3, 11, 15; December 2, 14 \\
+        \end{tblr}
+    \end{table}
+    \end{center}
+
+	\subsection*{Course requisites:}
 		\begin{itemize}
-			\item POSC 509: Public Administration Foundations
+            \item POSC 509: Foundations of Public Administration
+            \item POSC 523: Administrative Research and Analysis
+            \item POSC 526: Public Organizational Theory & Behavior
+            \item POSC 571: Public Budgeting and Finance
+            \item POSC 572: Human Resources Management
 		\end{itemize}
 
 	\subsection*{Catalog description:} 
@@ -869,7 +880,7 @@ It is the student's responsibility to read and understand the required and impor
 \end{itemize}
 
 
-          
+\newpage
 %% bibliography
 
 
