--- a/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
+++ b/POSC 521 MPA Capstone/2025-26 Fall/POSC521_2025_fall.tex
@@ -162,7 +162,7 @@ This course will be conducted in a hybrid format, with both in-person and asynch
 		\begin{itemize}
             \item POSC 509: Foundations of Public Administration
             \item POSC 523: Administrative Research and Analysis
-            \item POSC 526: Public Organizational Theory & Behavior
+            \item POSC 526: Public Organizational Theory \& Behavior
             \item POSC 571: Public Budgeting and Finance
             \item POSC 572: Human Resources Management
 		\end{itemize}
